--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "video.js": "^6.7.3",
     "vue-i18n": "^7.3.3"
   },
   "devDependencies": {
@@ -25,7 +26,9 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.3.0",
-    "quasar-cli": "^0.15.11"
+    "node-sass": "^4.7.2",
+    "quasar-cli": "^0.15.11",
+    "sass-loader": "^6.0.7"
   },
   "engines": {
     "node": ">= 8.9.0",
